<resources>
    <string name="app_name">WoocerAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_website">Enter Website</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_sign_in">SIGN IN</string>
</resources>